@@ -1043,4 +1043,58 @@ public class FieldsTest extends CascadingTestCase
     Fields resolved = Fields.resolve( selector, fields );
     assertTrue( resolved.hasTypes() );
     }
+
+  public void testConstructorWithNullComparableInArray()
+    {
+    try
+      {
+      new Fields( new Comparable[]{"a", null, "c"} );
+      fail( "Fields constructor should have thrown an Exception" );
+      }
+    catch ( IllegalArgumentException exception)
+      {
+      //expected
+      }
+    }
+
+  public void testConstructorWithNullComparable()
+    {
+    try
+      {
+      Comparable comparable = null;
+      new Fields( comparable );
+      fail( "Fields constructor should have thrown an Exception" );
+      }
+    catch ( IllegalArgumentException exception)
+      {
+      //expected
+      }
+    }
+
+  public void testConstructorWithNullTypes()
+    {
+    try
+      {
+      new Fields( new Comparable[]{"a", "b", "c"}, new Type[]{int.class, null, String.class} );
+      fail( "Fields constructor should have thrown an Exception" );
+      }
+    catch ( IllegalArgumentException exception)
+      {
+      //expected
+      }
+    }
+
+  public void testConstructorWithNullType()
+    {
+    try
+      {
+      Type type = null;
+      new Fields( "a" , type);
+      fail( "Fields constructor should have thrown an Exception" );
+      }
+    catch ( IllegalArgumentException exception)
+      {
+      //expected
+      }
+    }
   }
